# FastAPI-Blog-Project

./: .env.example  .gitignore  auth.py  blog.db  config.py  database.py  docker-compose.yml  email_utils.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py
.github/workflows/: deploy.yml
alembic/versions/: 5d49d2f24111_initial_schema.py  78fd98ea52cc_add_likes_column_to_posts_table.py
routers/: posts.py  users.py
static/js/: utils.js
templates/: account.html  home.html  layout.html  login.html  post.html  user_posts.html
tests/: conftest.py  test_posts.py  test_users.py
