[project]
name = "fastapi-blog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "boto3>=1.42.90",
    "fastapi[standard]>=0.128.1",
    "greenlet>=3.3.1",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "moto[s3]>=5.1.22",
    "pytest>=9.0.3",
]
